# feedsearch-gateway

./: .gitignore  Pipfile  README.md  pyproject.toml  upload_s3_assets.py  zappa_settings.json
.github/workflows/: codeql-analysis.yml
gateway/: application.py  crawl.py  dynamodb_client.py  dynamodb_schema.py  dynamodb_storage.py  exceptions.py  feedinfo.py  feedinfo_schema.py  feedly.py  schema.py  search.py  storage.py  utils.py
gateway/schema/: customfeedinfo.py  dynamodb_feedinfo_schema.py  dynamodb_schema_base.py  dynamodb_site_schema.py  dynamodb_sitepath_schema.py  external_feedinfo_schema.py  external_site_schema.py  fields.py  sitehost.py  sitepath.py
gateway/static/: .webassets-manifest  custom.css  main.css  manifest.json
gateway/templates/: base.html  error.html  form.html  index.html  results.html
scripts/: bulk_load_table.py  count_sites.py  create_table.py  delete_table.py  get_site_feeds.py  items.json  remove_site_metadata.py
tests/: conftest.py  feedly_test.py  schema_test.py  search_test.py  test_path_load.py  utils_test.py  xkcd.com.json
