[tool.poetry]
name = "feedsearch-gateway"
version = "0.1.0"
description = ""
authors = ["Dave Beath <davidgbeath@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
zappa = "^0.54.1"
feedsearch-crawler = "^1.0.2"
marshmallow = "^3.15.0"
sentry-sdk = {extras = ["flask"], version = "^1.5.12"}
click = "^8.1.3"
udatetime = "^0.0.16"
boto3 = "^1.23.8"
cssmin = "^0.2.0"
validators = "^0.19.0"
python-dateutil = "^2.8.2"
Flask-S3 = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
